<resources>
    <string name="app_name">RSG</string>
    <string name="app_name_gambiarracreatepost">ADICIONAR POSTAGEM</string>
    <string name="logoname">Rede Social Genérica</string>
    <string name="nome">Nome:</string>
    <string name="email">Email:</string>
    <string name="senha">Senha:</string>
    <string name="telefone">Número de telefone:</string>
    <string name="confirmasenha">Confirmar senha:</string>
    <string name="login">Login</string>
    <string name="cadastro">Cadastro</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="logar">Entrar</string>
    <string name="imageselect">Selecionar imagem</string>
    <string name="editar">Editar cadastro</string>
    <string name="salvar">Salvar</string>
    <string name="mypost">Minhas postagens</string>
    <string name="sair">Sair</string>
    <string name="title_activity_create_post">CreatePost</string>
</resources>
