<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">

    <include
        android:id="@+id/include2"
        layout="@layout/custom_tool_bar" />

    <Button
        android:id="@+id/catchimage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@color/toolbar"
        android:elevation="4dp"
        android:text="@string/imageselect"
        android:textColor="@color/branco"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75">

        <TextView
            android:id="@+id/nome"
            android:text="@string/nome" />

        <EditText
            android:id="@+id/nometext"
            android:hint="Seu nome e sobrenome" />

        <TextView android:text="@string/email" />

        <EditText
            android:id="@+id/emailtext"
            android:hint="joaosousa@example.com" />

        <TextView android:text="@string/senha" />

        <TableLayout android:id="@+id/cadastrotable">

            <EditText
                android:id="@+id/senhatext"
                android:hint="Sua senha"
                android:inputType="textPassword" />

            <TextView android:text="@string/confirmasenha" />

            <EditText
                android:id="@+id/confirmatext"
                android:hint="Repita sua senha"
                android:inputType="textPassword" />

            <TextView android:text="@string/telefone" />

            <EditText
                android:id="@+id/telefonetext"
                android:hint="(00)0000-0000"
                android:inputType="number" />
        </TableLayout>

        <CheckBox
            android:id="@+id/logcheck"
            android:text="@string/logar"
            android:textSize="20dp" />


        <Button
            android:id="@+id/logbtn"
            android:background="@color/toolbar"
            android:text="@string/cadastrar"
            android:textColor="@color/branco" />


    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>